--- a/public/articles/views/list-articles.client.view.html
+++ b/public/articles/views/list-articles.client.view.html
@@ -1,5 +1,4 @@
-<section data-ng-controller="ArticlesController" data-nginit="
-find()">
+<section data-ng-controller="ArticlesController" data-ng-init="find()">
     <h1>Articles</h1>
     <ul>
         <li data-ng-repeat="article in articles">
