--- a/public/articles/views/edit-article.client.view.html
+++ b/public/articles/views/edit-article.client.view.html
@@ -1,5 +1,4 @@
-<section data-ng-controller="ArticlesController" data-nginit="
-findOne()">
+<section data-ng-controller="ArticlesController" data-ng-init="findOne()">
     <h1>Edit Article</h1>
     <form data-ng-submit="update()" novalidate>
         <div>
